--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,84 @@
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/layout.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>Filedal</title>
 </head>
+
 <body>
-    
+    <div id="wrap">
+        <header id="header">
+            <div class="flex-c">
+                <div class="menu-trigger">
+                    <img src="img/ic_menu.png" alt="">
+                </div>
+                <h1 id="logo">
+                    <a href="#">
+                        <img src="img/logo.png" alt="FILEDAL">
+                    </a>
+                </h1>
+                <a href="#" class="user-btn">
+                    <img src="img/ic_login.png" alt="">
+                </a>
+            </div>
+            <div class="sch-box">
+                <form action="">
+                    <input type="text" placeholder="검색어를 입력하세요.">
+                    <button type="button" class="sch-btn"></button>
+                </form>
+            </div>
+        </header>
+        <nav id="nav">
+            <ul>
+                <li>
+                    <a href="#">
+                        인기
+                        <img src="img/menu-star.png" alt="" class="star-icon">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">영화</a>
+                </li>
+                <li>
+                    <a href="#">드라마</a>
+                </li>
+                <li>
+                    <a href="#">동영상</a>
+                </li>
+                <li>
+                    <a href="#">게임</a>
+                </li>
+                <li>
+                    <a href="#">애니</a>
+                </li>
+                <li>
+                    <a href="#">만화</a>
+                </li>
+                <li>
+                    <a href="#">도서</a>
+                </li>
+                <li>
+                    <a href="#">교육</a>
+                </li>
+                <li>
+                    <a href="#">유틸</a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="adult-icon"></i>
+                        웹툰
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="adult-icon"></i>
+                        성인
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </body>
+
 </html>
