레이아웃 작업 중

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/layout.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="js/front.js"></script>
     <title>Filedal</title>
 </head>
 
@@ -86,6 +87,62 @@
                 </li>
             </ul>
         </nav>
+        <aside id="sideMenu">
+            <div class="close-btn">
+                <img src="img/icn_close.png" alt="">
+            </div>
+            <div class="side-logo">
+                <img src="img/side_logo.png" alt="">
+            </div>
+            <p class="my-info-text">내정보를 보시려면 로그인을 해주세요.</p>
+            <div class="btn-wrap">
+                <a href="#n" class="login-btn">로그인</a>
+                <a href="#n" class="join-btn">회원가입</a>
+            </div>
+            <ul class="side-menu">
+                <li>
+                    <a href="#n">
+                        쿠폰등록
+                    </a>
+                </li>
+                <li>
+                    <a href="#n">
+                        포인트 충전
+                    </a>
+                </li>
+                <li>
+                    <a href="#n">
+                        정액권 충정
+                    </a>
+                </li>
+                <li>
+                    <a href="#n">
+                        출석체크
+                    </a>
+                </li>
+                <li>
+                    <a href="#n">
+                        이벤트
+                    </a>
+                </li>
+                <li>
+                    <a href="#n">
+                        공지사항
+                    </a>
+                </li>
+                <li>
+                    <a href="#n">
+                        자주 묻는 질문
+                    </a>
+                </li>
+                <li>
+                    <a href="#n">
+                        1:1 문의
+                    </a>
+                </li>
+            </ul>
+        </aside>
+        <div class="side-cover"></div>
     </div>
 </body>
 
