--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <div id="wrap">
+        <!-- header -->
         <header id="header">
             <div class="flex-c">
                 <div class="menu-trigger">
@@ -38,6 +39,8 @@
                 </form>
             </div>
         </header>
+        <!-- // header -->
+        <!-- nav -->
         <nav id="nav">
             <ul>
                 <li>
@@ -87,6 +90,8 @@
                 </li>
             </ul>
         </nav>
+        <!-- // nav -->
+        <!-- sideMenu -->
         <aside id="sideMenu">
             <div class="close-btn">
                 <img src="img/icn_close.png" alt="">
@@ -141,8 +146,59 @@
                     </a>
                 </li>
             </ul>
+            <div class="customer">
+                <h3>고객센터 안내</h3>
+                <p class="tel">1588-1588</p>
+                <p class="info">평일<strong class="ml-10 mr-25">10:00 ~ 18:00</strong>점심시간<strong class="ml-10">13:00 ~ 14:00</strong></p>
+            </div>
         </aside>
         <div class="side-cover"></div>
+        <!-- // sideMenu -->
+        <!-- container -->
+        <div id="container">
+
+        </div>
+        <!-- // container -->
+        <!-- footer -->
+        <div id="footer">
+            <div class="ft-menu">
+                <ul>
+                    <li><a href="#n">이용약관</a></li>
+                    <li><a href="#n">개인정보처리방침</a></li>
+                    <li><a href="#n">청소년보호정책</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#n">저작권보호센터</a></li>
+                    <li><a href="#n">개인정보침해신고센터</a></li>
+                    <li><a href="#n">고객센터</a></li>
+                </ul>
+            </div>
+            <p class="info">파일달 사업자 정보<i></i></p>
+            <p class="rule">아동·청소년이용음란물을 제작·배포·소지한 자는「아동ㆍ청소년의 성보호에 관한 법률」제11조에 따라 형사처벌을 받을 수 있습니다.</p>
+            <div class="ft-logo">
+                <img src="img/ft-logo.png" alt="FILEDAL">
+            </div>
+        </div>
+        <!-- // footer -->
+        <!-- botMenu -->
+        <div id="botMenu">
+            <a href="#n">
+                <img src="img/home-4-line.png" alt="">홈
+            </a>
+            <a href="#n">
+                <img src="img/exchange-funds-fill.png" alt="">충전샵
+            </a>
+            <a href="#n">
+                <img src="img/gift-2-line.png" alt="">이벤트
+            </a>
+            <a href="#n">
+                <img src="img/star-line.png" alt="">즐겨찾기
+            </a>
+        </div>
+        <!-- // botMenu -->
+        <a href="#n" class="top-btn">
+            <img src="img/btn_top.png" alt="">
+        </a>
     </div>
 </body>
 
