--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -104,7 +103,7 @@
             </div>
             <p class="my-info-text">내정보를 보시려면 로그인을 해주세요.</p>
             <div class="btn-wrap">
-                <a href="#n" class="login-btn">로그인</a>
+                <a href="html/login.html" class="login-btn">로그인</a>
                 <a href="#n" class="join-btn">회원가입</a>
             </div>
             <ul class="side-menu">
