--- a/html/login.html
+++ b/html/login.html
@@ -47,7 +47,7 @@
                                 <input type="checkbox" name="" id="loginSave">
                                 <label for="loginSave">로그인 유지</label>
                             </div>
-                            <a href="#n" class="find-link">아이디/비밀번호 찾기</a>
+                            <a href="./findid.html" class="find-link">아이디/비밀번호 찾기</a>
                         </div>
                         <hr class="dividing"/>
                         <p class="sns-info-text">애플, 카카오톡, 네이버 계정으로도<br>서비스 이용이 가능합니다.</p>
