--- a/html/findpw.html
+++ b/html/findpw.html
@@ -28,13 +28,13 @@
         <div id="container" class="user">
             <article class="tab-menu">
                 <ul>
-                    <li><a href="./findid.html" class="on">아이디 찾기</a></li>
-                    <li><a href="./findpw.html">비밀번호 찾기</a></li>
+                    <li><a href="./findid.html">아이디 찾기</a></li>
+                    <li><a href="./findpw.html" class="on">비밀번호 찾기</a></li>
                 </ul>
             </article>
             <section>
                 <form action="">
-                    <div class="find-box">
+                    <div class="find-box fint-pw">
                         <ul class="sub-tab" data-tabMenu>
                             <li><a href="#" class="on" data-tab="1">회원정보로 찾기</a></li>
                             <li><a href="#" data-tab="2">아이핀으로 찾기</a></li>
@@ -75,23 +75,16 @@
                         </div>
                         <div class="sub-tab-con" data-tabCon="3"></div>
                         <!-- <div class="find-complete">
-                                <p class="comple-tit">비밀번호 찾기 검색 결과입니다.</p>
-                                <div class="comple-box">
-                                    <p>
-                                        회원가입 정보에 등록된 메일로<br>
-                                        <b>임시 비밀번호</b>를 발송하였습니다.<br>
-                                        <span>이메일 : filedal@naver.com</span>
-                                    </p>
-                                </div>
-                                <div class="btn-box">
-                                    <a href="#n" class="cancel">
-                                        뒤로
-                                    </a>
-                                    <a href="#n" class="confirm" rel="modal:close">
-                                        확인
-                                    </a>
-                                </div>
-                            </div> -->
+                            <p class="comple-tit">비밀번호 찾기 검색 결과입니다.</p>
+                            <div class="comple-box">
+                                <p>
+                                    회원가입 정보에 등록된 메일로<br>
+                                    <b>임시 비밀번호</b>를 발송하였습니다.<br>
+                                    <span>filedal@naver.com</span>
+                                </p>
+                            </div>
+                            <a href="#">확인</a>
+                        </div> -->
                     </div>
                 </form>
             </section>
