--- a/html/findid.html
+++ b/html/findid.html
@@ -34,7 +34,7 @@
             </article>
             <section>
                 <form action="">
-                    <div class="find-box">
+                    <div class="find-box find-id">
                         <ul class="sub-tab" data-tabMenu>
                             <li><a href="#" class="on" data-tab="1">회원정보로 찾기</a></li>
                             <li><a href="#" data-tab="2">아이핀으로 찾기</a></li>
@@ -140,14 +140,7 @@
                             <p class="info">
                                 개인정보 보호를 위해 아이디의 일부는 *로 표기됩니다.
                             </p>
-                            <div class="btn-box">
-                                <a href="#n" class="cancel">
-                                    뒤로
-                                </a>
-                                <a href="#n" class="confirm" rel="modal:close">
-                                    확인
-                                </a>
-                            </div>
+                            <a href="#">확인</a>
                         </div> -->
                     </div>
                 </form>
