--- a/html/login.html
+++ b/html/login.html
@@ -56,7 +56,7 @@
                             <a href="#" class="ml-20 mr-20"><img src="../img/ico-kakao.png" alt="카카오"></a>
                             <a href="#"><img src="../img/ico-apple.png" alt="애플"></a>
                         </div>
-                        <a href="#" class="join-link">파일달 무료 회원 가입</a>
+                        <a href="./join.html" class="join-link">파일달 무료 회원 가입</a>
                     </div>
                 </form>
             </section>
